# mantis-cad

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
crates/mantis-app/: Cargo.toml  index.html
crates/mantis-app/src/: app.rs  chain_panel.rs  main.rs  node_editor.rs  state.rs  sync.rs  util.rs  viewport.rs
crates/mantis-chain/: Cargo.toml
crates/mantis-chain/src/: lib.rs
crates/mantis-chain/tests/: nonfinite_ops.rs
crates/mantis-cli/: Cargo.toml
crates/mantis-cli/src/: demo.rs  main.rs  replay.rs
crates/mantis-graph/: Cargo.toml
crates/mantis-graph/src/: component.rs  eval.rs  graph.rs  lib.rs  value.rs
crates/mantis-graph/src/components/: analysis.rs  curves.rs  maths.rs  mod.rs  params.rs  sets.rs  surface.rs  tests.rs  transform.rs  util.rs  vectors.rs
crates/mantis-graph/tests/: coercions.rs
crates/mantis-kernel/: Cargo.toml
crates/mantis-kernel/src/: curve.rs  lib.rs  math.rs  mesh.rs  ops.rs
crates/mantis-kernel/tests/: nonfinite_guards.rs
crates/mantis-server/: Cargo.toml
crates/mantis-server/src/: main.rs
examples/: demo-chain.json
