[package]
name = "mantis-chain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mantis-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
